Fix the spacing in Inner Page

--- a/assets/css/boot.css
+++ b/assets/css/boot.css
@@ -97,11 +97,12 @@ padding: 5px 8px;
 line-height: 1;
 }
 .social-bar {
-padding: 15px 0;
-text-align: center;
+text-align: left;
 background-color: #f5f5f5;
 border-top: 1px solid #fff;
 border-bottom: 1px solid #ddd;
+border-bottom: 1px solid #ddd;
+margin: -20px 0 20px;
 }
 /* ================================
 					FOOTER
